Update and rename demo.html to DEMO.html

--- a/DEMO.html
+++ b/DEMO.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <title>Тест 3D</title>
+    <title>3D testing</title>
     <style type="text/css">
       .div3d        {width:300px;  height:300px; position: relative;float: left}
       .first3d      {width:600px;  height:600px;}
